# boVIE

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Justfile  Makefile  README.md  agent.md  alembic.ini  bovie.py  compose.yaml  fly.toml  main.py  mise.toml  package.json  pnpm-lock.yaml  pyproject.toml  railway.json
.github/workflows/: cd.yml  ci.yml  codeql.yml
alembic/: env.py
alembic/versions/: 202606051335_add_unique_offer_id.py
apps/worker/: package.json  tsconfig.json
apps/worker/src/: index.ts  schema.ts  types.ts
bovie/: utils.py
bovie/businessFrance/: BFClient.py  Client.py  IRepository.py  OfferRepository.py  Service.py  models.py
bovie/businessFrance/interfaces/: IRepository.py
bovie/businessFrance/resources/: OfferService.py
bovie/database/: Repository.py  Service.py
bovie/discord/: Config.py  __init__.py  bot.py
bovie/discord/cogs/: vie.py
bovie/discord/embeds/: offer.py
bovie/discord/views/: apply.py  example.py
data/: geographic_zones.json  search_param.json
data/schema/: countries.json  offer.json  search.json
docs/: httpie-collection-businessfrance-vie.json
src/: env.py
src/bovie/: config.py  db.py  env.py  main.py  t.py
src/bovie/db/: __init__.py
src/bovie/discord/: __init__.py  model.py
src/bovie/job/: __init__.py  enum.py  model.py  models.py  publisher.py  repository.py  writer.py
src/bovie/job/models/: country.py  geozone.py  job.py  search.py  specialization.py
src/businessFrance/: OfferService.py  enum.py  models.py
src/discord/: model.py
src/job/: __init__.py  model.py  repository.py  writer.py
src/presenters/: IFront.py
src/repository/: BaseRepository.py  InMemoryRepository.py  SimpleRepository.py
src/writer/: BaseWriter.py  DiscordWriter.py  TerminalWriter.py
tests/: test_config.py  test_country.py  test_discord.py  test_geo.py  test_offer_deduplication.py
