[project]
name = "bovie"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.8",
    "emoji>=2.14.0",
    "hikari>=2.1.0",
    "httpx>=0.28.1",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.0.1",
    "uvloop>=0.21.0",
]
